clusters/homelab/apps/stremio/peerauthentication.yaml
apiVersion: security.istio.io/v1
kind: PeerAuthentication
metadata:
  name: stremio-mtls
  namespace: stremio
spec:
  mtls:
    mode: STRICT
