clusters/homelab/apps/stremio/gateway.yaml
---
apiVersion: networking.istio.io/v1
kind: Gateway
metadata:
  name: stremio-gateway
  namespace: flux-system
spec:
  selector:
    istio: ingress
  servers:
  - port:
      number: 443
      name: https
      protocol: HTTPS
    tls:
      mode: MUTUAL
      credentialName: stremio-tls
      caCertificates: /etc/ssl/certs/ca-certificates.crt
    hosts:
    - stremio.daddyshome.fr
