clusters/homelab/apps/stremio/httproute-server.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: stremio-server
  namespace: stremio
  annotations:
    external-dns.alpha.kubernetes.io/hostname: "stremio-server.daddyshome.fr"
spec:
  parentRefs:
  - name: homelab-gateway
    namespace: envoy-gateway-system
    sectionName: stremio-server-https
  hostnames:
  - "stremio-server.daddyshome.fr"
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: stremio-server
      port: 80
