clusters/homelab/apps/stremio/httproute-web.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: stremio-web
  namespace: stremio
  annotations:
    external-dns.alpha.kubernetes.io/hostname: "stremio.daddyshome.fr"
spec:
  parentRefs:
  - name: homelab-gateway
    namespace: envoy-gateway-system
    sectionName: stremio-web-https
  hostnames:
  - "stremio.daddyshome.fr"
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: stremio-web
      port: 8080
