clusters/homelab/apps/stremio/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: stremio-web
  namespace: stremio
  annotations:
    haproxy-ingress.github.io/secure-backends: "true"
    haproxy-ingress.github.io/secure-verify-ca-secret: client-ca-secret/ca
    haproxy-ingress.github.io/ssl-redirect: "true"
spec:
  ingressClassName: haproxy
  tls:
  - hosts:
    - stremio.daddyshome.fr
    secretName: stremio-tls-certificate
  rules:
  - host: stremio.daddyshome.fr
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: stremio-web
            port:
              number: 8080
