clusters/homelab/apps/stremio/server-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: stremio-server
  namespace: stremio
  annotations:
    haproxy-ingress.github.io/secure-backends: "true"
    haproxy-ingress.github.io/secure-verify-ca-secret: client-ca-secret/ca
    haproxy-ingress.github.io/ssl-redirect: "true"
    haproxy-ingress.github.io/timeout-server: "600s"
    haproxy-ingress.github.io/proxy-body-size: "0"
spec:
  ingressClassName: haproxy
  tls:
  - hosts:
    - stremio-server.daddyshome.fr
    secretName: stremio-server-tls-certificate
  rules:
  - host: stremio-server.daddyshome.fr
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: stremio-server
            port:
              number: 80
